@@ -1230,7 +1230,7 @@
 //-- WL_HELLINFERNO
 2212,5000,0,0,0,25000,0
 //-- WL_COMET -- Missing: Duration
-2213,13000,5000,180000,0,1000,20000
+2213,13000,5000,180000,0,100,20000
 //-- WL_CHAINLIGHTNING
 2214,5000,0,0,0,1000,0
 //-- WL_EARTHSTRAIN
