@@ -1,0 +1,23 @@
+//============================================================
+// Preserve points database for Reading Spellbook. [LimitLine]
+// Structure:
+// SkillID,PreservePoints
+//============================================================
+//
+14,7
+19,7
+20,7
+21,9
+83,10
+84,9
+85,10
+86,9
+89,10
+90,8
+91,9
+2210,8
+2211,12
+2213,22
+2214,12
+2216,12
+2217,22
